--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <!-- 以下配置主题样式 -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <!-- Gitalk 评论系统 -->
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css"> -->
 
 
 </head>
@@ -16,41 +18,46 @@
 <body>
   <div id="app">loading</div>
   <script>
+
     window.$docsify = {
       name: 'Learning Notes',
       repo: 'https://github.com/zaze359/Learning-notes/',
       search: {
+        // relativePath: true,
         maxAge: 86400000, // 过期时间，单位毫秒，默认一天
         paths: 'auto', // or 'auto'
-        placeholder: 'Type to search',
-        noData: 'No Results!',
+        placeholder: '搜索',
+        noData: '没有结果!',
         // 搜索标题的最大层级, 1 - 6
         depth: 3,
-
-        // hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
-
-        // 避免搜索索引冲突
-        // 同一域下的多个网站之间
-        // namespace: 'website-1',
-
-        // 使用不同的索引作为路径前缀（namespaces）
-        // 注意：仅适用于 paths: 'auto' 模式
-        //
-        // 初始化索引时，我们从侧边栏查找第一个路径
-        // 如果它与列表中的前缀匹配，我们将切换到相应的索引
-        // pathNamespaces: ['/zh-cn', '/ru-ru', '/ru-ru/v1'],
-
-        // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
-        // 匹配到的字符串将被用来识别索引
-        // pathNamespaces: /^(\/(zh-cn|ru-ru))?(\/(v1|v2))?/
+      },
+      // 字数统计
+      count: {
+        countable: true,
+        fontsize: '0.9em',
+        color: 'rgb(90,90,90)',
+        language: 'chinese'
       },
       // 编辑 _sidebar.md
       // loadSidebar: true,
       subMaxLevel: 2,
       // 编辑 _coverpage.md
-      coverpage: true,
+      // coverpage: true,
+      // loadNavbar: true,
       maxLevel: 4,
-      loadNavbar: true
+      copyCode: {
+        buttonText: {
+          '/': '点击复制'
+        },
+        errorText: {
+          '/': '错误'
+        },
+        successText: {
+          '/': '复制'
+        }
+      },
+      // 谷歌统计
+      // ga: 'UA-XXXXX-Y',
     }
   </script>
   <!-- Docsify v4 -->
@@ -58,6 +65,7 @@
   <!-- 全文搜索js -->
   <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script> -->
   <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
+  <!-- <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script> -->
   <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
   <!-- 以下配置代码高亮 -->
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
@@ -65,6 +73,33 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-kotlin.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-groovy.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-shell-session.min.js"></script>
+  <!--  -->
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/disqus.min.js"></script> -->
+
+  <!-- Gitalk 评论系统 -->
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+  <script>
+    const gitalk = new Gitalk({
+      clientID: 'Github Application Client ID',
+      clientSecret: 'Github Application Client Secret',
+      repo: 'Github repo',
+      owner: 'Github repo owner',
+      admin: ['Github repo collaborators, only these guys can initialize github issues'],
+      // facebook-like distraction free mode
+      distractionFreeMode: false
+    })
+  </script> -->
+  <!-- 字数统计 -->
+  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+  <!-- Click to copy -->
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script> -->
+  <script src="https://unpkg.com/docsify-copy-code"></script>
+  <!-- google 统计 -->
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script> -->
+  <!-- emoji -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
 </body>
 
 </html>
