--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     window.$docsify = {
       name: 'Learning Notes',
       repo: 'https://github.com/zaze359/Learning-notes/',
+      relativePath: true,
       search: {
-        // relativePath: true,
         maxAge: 86400000, // 过期时间，单位毫秒，默认一天
         paths: 'auto', // or 'auto'
         placeholder: '搜索',
